Remove previous About text below the image and add new one above it

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,8 +13,8 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Soheil Yousefi. It uses data from mapbox.com and openweathermap.org.</p>
         <img class="portrait" src="/img/robot.png" alt="Robot">
-        <p>My name is Soheil and I'm a web designer.</p>
     </div>
 
     {{>footer}}
